syntax = "proto3";
package api_def;
option go_package = "/api_def";

import "kk_etcd_api_hub/role/api_def/RoleAdd.proto";
import "kk_etcd_api_hub/role/api_def/RoleDelete.proto";
import "kk_etcd_api_hub/role/api_def/RoleGet.proto";
import "kk_etcd_api_hub/role/api_def/RoleGrantPermission.proto";
import "kk_etcd_api_hub/role/api_def/RoleList.proto";
import "kk_etcd_api_hub/role/api_def/RoleRevokePermission.proto";

service Role {
  rpc RoleAdd(RoleAdd.Input) returns (RoleAdd.Output);
  rpc RoleDelete(RoleDelete.Input) returns (RoleDelete.Output);
  rpc RoleGet(RoleGet.Input) returns (RoleGet.Output);
  rpc RoleGrantPermission(RoleGrantPermission.Input) returns (RoleGrantPermission.Output);
  rpc RoleList(RoleList.Input) returns (RoleList.Output);
  rpc RoleRevokePermission(RoleRevokePermission.Input) returns (RoleRevokePermission.Output);
}