syntax = "proto3";
package models;

option go_package = "./;models";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=./dart *.proto

message PBRole {
  string  Name = 1;
  string  Key = 2;
  string  RangeEnd = 3;
  int32  PermissionType = 4;
}

message PBListRole {
  repeated PBRole  List = 1;
}